--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
 </head>
 <body>
     <header>
-        <div class="menu-button"><img src="assets/menu.svg"></div>
-        <div class="navigation-link">
+        <div class="navigation-bar">
+            <div class="menu-button" onclick="displayMenu()"><img src="assets/menu.svg"></div>
+            <div class="navigation-link">
+                <div><a href="#">Work</a></div>
+                <div><a href="#">Blog</a></div>
+                <div><a href="#">Contact</a></div>
+            </div>
+        </div>
+        
+        <div class="drop-down-menu">
             <div><a href="#">Work</a></div>
             <div><a href="#">Blog</a></div>
             <div><a href="#">Contact</a></div>
