--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <footer>
 
     </footer>
-    <script src="script/script.js" />
+    <script src="script/script.js"></script>
 </body>
 </html>
