--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <footer>
 
     </footer>
+    <div class="blank-cover" onclick="displayMenu()">
+        
+    </div>
     <script src="script/script.js"></script>
 </body>
 </html>
