--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
     </header>
 
     <main>
+        <div class="hero-section">
+            <div class="hero-section-left">
+                <div class="hero-section-left-first-child">Hi, I am John,<br> Creative Technologist</div>
 
+                <div>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+
+                <div><button>Download Resume</button></div>
+            </div>
+
+            <div class="hero-section-right">
+                <div><img src="assets/profile.png"></div>
+            </div>
+        </div>
     </main>
 
     <footer>
