--- a/index.html
+++ b/index.html
@@ -71,6 +71,42 @@
                 
             </div>
         </div>
+
+        <div class="featured-work-section">
+            <div class="featured-work-title">
+                Featured works
+            </div>
+
+            <div class="featured-work-container">
+                <div class="featured-work">
+                    <div><div class="featured-work-image-container"><img class="featured-work-image" src="assets/fw-1.png"></div></div>
+                    <div class="featured-work-description">
+                        <p class="featured-work-header">Designing Dashboards</p>
+                        <p><span class="featured-work-date">2020</span><span class="featured-work-type">Dashboard</span></p>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+
+                <div class="featured-work">
+                    <div><div class="featured-work-image-container"><img class="featured-work-image" src="assets/fw-2.png"></div></div>
+                    <div class="featured-work-description">
+                        <p class="featured-work-header">Vibrant Portraits of 2020</p>
+                        <p><span class="featured-work-date">2020</span><span class="featured-work-type">Illustration</span></p>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+
+                <div class="featured-work">
+                    <div><div class="featured-work-image-container"><img class="featured-work-image" src="assets/fw-3.png"></div></div>
+                    <div class="featured-work-description">
+                        <p class="featured-work-header">36 Days of Malayalam type</p>
+                        <p><span  class="featured-work-date">2018</span><span class="featured-work-type">Typography</span></p>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </main>
 
     <footer>
